[package]
name = "rust-pr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { version = "1.0.92", features = ["backtrace"] }
clap = { version = "4.5.20", features = ["derive"] }
os_display = "0.1.3"
owo-colors = "4.1.0"
serde_json = "1.0.132"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }

[[bin]]
name = 'a'
path = 'exp/x.rs'

